# prestic-ng

./: LICENSE  README.md  TODO.md  pyproject.toml  setup.py
docs/: development.md
docs/examples/: config.example.ini
prestic/: prestic.py
